// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json reporter captures number of journeys as metadata event 1`] = `
"{\\"type\\":\\"synthetics/metadata\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"num_journeys\\":10,\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"package_version\\":\\"0.0.1\\"}
"
`;

exports[`json reporter formats network fields in ECS format 1`] = `
Object {
  "ecs": Object {
    "http": Object {
      "request": Object {
        "body": Object {
          "bytes": 0,
          "content": "",
        },
        "headers": Object {
          "accept_encoding": "gzip, deflate, br",
          "method": "GET",
          "path": "/",
          "upgrade_insecure_requests": "1",
          "user_agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_6) AppleWebKit/537.36 (KHTML, like Gecko) HeadlessChrome/90.0.4392.0 Safari/537.36",
        },
        "initial_priority": "VeryHigh",
        "method": "GET",
        "mixed_content_type": "none",
        "referrer": undefined,
        "referrer_policy": "strict-origin-when-cross-origin",
        "url": "https://vigneshh.in/",
      },
      "response": Object {
        "body": Object {
          "bytes": 3329,
        },
        "connection_id": 12,
        "connection_reused": false,
        "encoded_data_length": 3329,
        "from_disk_cache": false,
        "from_prefetch_cache": false,
        "from_service_worker": false,
        "headers": Object {},
        "mime_type": "text/html",
        "protocol": "h2",
        "remote_i_p_address": "[2606:4700:3035::ac43:83e0]",
        "remote_port": 443,
        "response_time": 1612482095476.922,
        "security_details": Object {
          "certificate_id": 0,
          "certificate_transparency_compliance": "unknown",
          "cipher": "AES_128_GCM",
          "issuer": "Cloudflare Inc ECC CA-3",
          "key_exchange": "",
          "key_exchange_group": "X25519",
          "protocol": "TLS 1.3",
          "san_list": Array [],
          "signed_certificate_timestamp_list": Array [],
          "subject_name": "sni.cloudflaressl.com",
          "valid_from": 1595980800,
          "valid_to": 1627560000,
        },
        "security_state": "secure",
        "status": 200,
        "status_code": 200,
        "status_text": "",
        "url": "https://vigneshh.in/",
      },
      "version": 2,
    },
    "tls": Object {
      "cipher": "AES_128_GCM_X25519",
      "server": Object {
        "x509": Object {
          "issuer": Object {
            "common_name": "Cloudflare Inc ECC CA-3",
          },
          "not_after": "2021-07-29T12:00:00.000Z",
          "not_before": "2020-07-29T00:00:00.000Z",
          "subject": Object {
            "common_name": "sni.cloudflaressl.com",
          },
        },
      },
      "version": "1.3",
      "version_protocol": "tls",
    },
    "url": "https://vigneshh.in/",
    "user_agent": Object {
      "name": "HeadlessChrome",
      "original": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_6) AppleWebKit/537.36 (KHTML, like Gecko) HeadlessChrome/90.0.4392.0 Safari/537.36",
      "version": "90.0.4392.0",
    },
  },
  "payload": Object {
    "browser": Object {
      "name": "HeadlessChrome",
      "version": "90.0.4392.0",
    },
    "is_navigation_request": true,
    "load_end_time": 2355505.448326,
    "method": "GET",
    "request_sent_time": 2355505.10179,
    "resource_size": 7634,
    "response_received_time": 2355505.4514,
    "status": 200,
    "timings": Object {
      "blocked": 2.080999780446291,
      "connect": 78.5130001604557,
      "dns": 45.81400007009506,
      "proxy": -1,
      "queueing": 2.145999576896429,
      "receive": 3.9220000617206097,
      "send": 0.5449997261166573,
      "ssl": 61.003000009804964,
      "total": 346.5359997935593,
      "wait": 212.02100021764636,
    },
    "transfer_size": 3392,
    "type": "Document",
  },
}
`;

exports[`json reporter formats network fields in ECS format 2`] = `
Object {
  "ecs": Object {
    "http": Object {
      "request": Object {
        "body": Object {
          "bytes": 0,
          "content": "",
        },
        "headers": Object {
          "referer": "https://vigneshh.in/",
          "user_agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_6) AppleWebKit/537.36 (KHTML, like Gecko) HeadlessChrome/90.0.4392.0 Safari/537.36",
        },
        "initial_priority": "Low",
        "method": "GET",
        "mixed_content_type": "none",
        "referrer": "https://vigneshh.in/",
        "referrer_policy": "strict-origin-when-cross-origin",
        "url": "https://vigneshh.in/static/main.js",
      },
      "response": Object {
        "body": Object {
          "bytes": 425,
        },
        "connection_id": 12,
        "connection_reused": true,
        "encoded_data_length": 425,
        "from_disk_cache": false,
        "from_prefetch_cache": false,
        "from_service_worker": false,
        "headers": Object {},
        "mime_type": "application/javascript",
        "protocol": "h2",
        "remote_i_p_address": "[2606:4700:3035::ac43:83e0]",
        "remote_port": 443,
        "response_time": 1612482095622.864,
        "security_details": Object {
          "certificate_id": 0,
          "certificate_transparency_compliance": "unknown",
          "cipher": "AES_128_GCM",
          "issuer": "Cloudflare Inc ECC CA-3",
          "key_exchange": "",
          "key_exchange_group": "X25519",
          "protocol": "TLS 1.3",
          "san_list": Array [],
          "signed_certificate_timestamp_list": Array [],
          "subject_name": "sni.cloudflaressl.com",
          "valid_from": 1595980800,
          "valid_to": 1627560000,
        },
        "security_state": "secure",
        "status": 200,
        "status_code": 200,
        "status_text": "",
        "url": "https://vigneshh.in/static/main.js",
      },
      "version": 2,
    },
    "tls": Object {
      "cipher": "AES_128_GCM_X25519",
      "server": Object {
        "x509": Object {
          "issuer": Object {
            "common_name": "Cloudflare Inc ECC CA-3",
          },
          "not_after": "2021-07-29T12:00:00.000Z",
          "not_before": "2020-07-29T00:00:00.000Z",
          "subject": Object {
            "common_name": "sni.cloudflaressl.com",
          },
        },
      },
      "version": "1.3",
      "version_protocol": "tls",
    },
    "url": "https://vigneshh.in/static/main.js",
    "user_agent": Object {
      "name": "HeadlessChrome",
      "original": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_6) AppleWebKit/537.36 (KHTML, like Gecko) HeadlessChrome/90.0.4392.0 Safari/537.36",
      "version": "90.0.4392.0",
    },
  },
  "payload": Object {
    "browser": Object {
      "name": "HeadlessChrome",
      "version": "90.0.4392.0",
    },
    "load_end_time": 2355505.589043,
    "method": "GET",
    "request_sent_time": 2355505.472502,
    "response_received_time": 2355505.603987,
    "status": 200,
    "timings": Object {
      "blocked": 1.058999914675951,
      "connect": -1,
      "dns": -1,
      "proxy": -1,
      "queueing": 46.335999853909016,
      "receive": 0.2009999006986618,
      "send": 0.2100002020597458,
      "ssl": -1,
      "total": 116.54099961742759,
      "wait": 68.73499974608421,
    },
    "type": "Script",
  },
}
`;

exports[`json reporter formats network fields in ECS format 3`] = `
Object {
  "ecs": Object {
    "http": Object {
      "request": Object {
        "body": Object {
          "bytes": 0,
          "content": "",
        },
        "has_post_data": true,
        "headers": Object {
          "content_type": "text/plain",
          "referer": "https://vigneshh.in/",
          "user_agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_6) AppleWebKit/537.36 (KHTML, like Gecko) HeadlessChrome/90.0.4392.0 Safari/537.36",
        },
        "initial_priority": "High",
        "method": "POST",
        "mixed_content_type": "none",
        "referrer": "https://vigneshh.in/",
        "referrer_policy": "strict-origin-when-cross-origin",
        "url": "https://www.google-analytics.com/",
      },
      "response": undefined,
      "version": undefined,
    },
    "tls": undefined,
    "url": "https://www.google-analytics.com/",
    "user_agent": Object {
      "name": "HeadlessChrome",
      "original": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_6) AppleWebKit/537.36 (KHTML, like Gecko) HeadlessChrome/90.0.4392.0 Safari/537.36",
      "version": "90.0.4392.0",
    },
  },
  "payload": Object {
    "browser": Object {
      "name": "HeadlessChrome",
      "version": "90.0.4392.0",
    },
    "load_end_time": -1,
    "method": "POST",
    "request_sent_time": 2355505.677688,
    "response_received_time": -1,
    "type": "XHR",
  },
}
`;

exports[`json reporter write screenshot block & reference docs 1`] = `
"{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"179333f72316bf86844017c9d0641ffd05baa1ed\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRhoBAABXRUJQVlA4IA4BAAAQDACdASqgAFoAPm02l0ikIqIhJFQJYIANiWkA1odfwAfty5jfRdEOqJvot4RSaI+i5/2KhPd8UbLyc0t3+nILr9QcbLYnNgbTYlwDeb7pGC5fZpcpmBufOGfZWDSzHmA+lbJH9Jq3oAAA/vpeAAAABaSuhEjeBI7jDlgWU2bFs79fIjsFOhLrV86hoGe5b4dgLaVw3Gl22JGmn4oP0v58yZYv5HNBjm7lMLJ9GiTBNRPQxfkB+PgS+9jECVRm+MNEPpUiiE6NRcXt68dYu3ED6CLFkrtbO/mHQY5CCom7f7LLy6GEqJtpitD3vm1AweA/P9o2oQaFuTs6WvgdzmOJZd3Gp5CEmB0MXpAAAAA=\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"fe4c7f3fb047c95b420ee28147665c42de3a13ee\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRk4BAABXRUJQVlA4IEIBAACQDgCdASqgAFoAPm02l0ikIyIhI9SZ+IANiWkA1mHwti/I5ymgsfu7u7u7u7u7uzkJ4yHToH5SSxp79K2N9P6YLCimOlLwS4J8QAS6i9RmGpJZDw2yuf6PGF4jNOhCgv7xLu+VeJ1of2ffiSP0b+xwaZZlERT+LOVlUvxmAAD++l4AAABbk/LM1lz4A6MaAJaQEBeNLVNaFhhOmSGJPHL7yD+jP+ihHge+nGXrAtWvp4FP7xZ90+YNz4ZgIkiLcHMgBmqoCslvSH230xeHfxRLy/CGkclRQrf0fMVSwqYY4TkUcRc/2ZE0LpSQo3kfJ+rPR3T9fcPC6BDrqC8Xg1dHiTeDDNP7FzHWUJA/A8pF45hGxydVnBnj+G1910+g96BnFYLeGLkFo6I3rQkSRFQP08VplSpX1zzxpmvD0V0EDEAA\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"379b4e68d52f42fdf5145b45a5fbab09f8771e9e\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRuIAAABXRUJQVlA4INYAAAAQCgCdASqgAFoAPm02lkkkIyKhIbVaYIANiWkDsAGPgAG0+27u7u7WjoQhBCajezThd3xD2qg3Kqq0XNAmNEKm7Og9iAHJ36gYSEIbipGmeBOmE8Ct68gAAAD++l4AAMTAUbp/XWN2ys6XwB8Hi8uxyrGgrmDgQLp6FlV2CapMIKWVoEVPsyx67p7MYaCe9TfNavVnNldZyHueceQrknJ+9RYiMsQ3Vy9Vevhh/3WcOSdY4SchnIqEjnoZIPVWT8tX8I8yieRvXkAJkUoYEtWbc30AAAAA\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"11d52112e38865c1be3c1ac9493f58ea7782221f\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRgACAABXRUJQVlA4IPQBAAAwEgCdASqgAFoAPm0ylUikIqIhJNHKWIANiWkADpLggOz3/XzTYleekAP9OnYlp9O2vg3YyImGneN/4mVxPFTTiOg9d7iFL9zRPVwovoMb2R9GcX26NP53lq5Q/opjpO+NkmmFrLFoYPK6T6bkYRELBge6J3d0CpYyulj20wdMsG4gJ9xkofCfP8KhTkUJBfopbNeHatQGu3wAAP76Xk3x7dvgOfAYrrlEypAZLlUrrAYnQlscD/PGpJkCDOuGdze8ax0ZFPNssq3Rxx6RT5+GHJxxfj2gm/Jks8FM/lp8tPMD19T8ulVU9JIUudOD5ee7r+eUaUMHZISzBXXFR8QAAVGA/nXPZLg50AAk6+umkfHma34w1vi4jMZrC+rB5zPM5tP5GRlJo2lRo81Qgj3QozZWmUGJsZqtTNPTmq07L763ONX2oWAIeBclMgxYp8A23C8gnSnK2/yNVBwEPKS6XYKEYKLBkVdUZHV5ApKgn6p6CpD4NXwPHCfzowJePSzOgpk6C8Bv/0koA6cRiTZNQwTMe7pPQfUYmdSmCFolRnukIOC44l13dMJvcJl+kxMzyGCtwyqrMGWODbBlfSQYsuYk8MBppsj2sVqjOtlNWvAR+cBsYw1cdEqWRZ8GnTKbKYPw5RdEozB/3Q6nO7gcQAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"74b3eacc9a74fd182032cda4b1cd68475727dbaa\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRjoBAABXRUJQVlA4IC4BAAAwDACdASqgAFoAPm02l0kkIqIhIIk4gA2JaQDXO1/ttUAD0TPaNE1Mk9r4qorZLB65Laiy9De4kmYu6d5QlzF+WLhRq2n3IEk+rPFCq7+7Pw5p8NLS7L6VuDH7C4qy8+FdWEXiU2wwD0IAAP79imMhzF4LR7x4njvuOervg2EgCGzEtXqmdSiRq79pGcAZjYQjSlP8SsAHNkWq+NuRVelzJqUM9JJPMKEThgvN5iNIfEnQJdXvOrIG1LFVs6mFRkEqcfRGCBToCUGPSV3OZWOXL+FqN3kGDSrAABNC79skRfF5dgEjaCDVzP149JWkluXCT8E/iXI+H87WfJzDcEejQhPtqlZe4pI73kMBlgs+YUWImsx6Y9F9hMhPDOLbHxMs4AKr2wr79lPegAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"c0e9bd119b5639b52ea1a7b230ad2c9c9f5210df\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRnQAAABXRUJQVlA4IGgAAACwBwCdASqgAFoAPm02l0kkIyIhIImAgA2JaW7dAAHiNsPaaBvJhWOXfaGb6ZWvF3+P4EdZJE8Yh7WRmQTG18atSRPF49owAP76XgUZR4un8eSABEj7s/OPA82Np283gKmTJtSNHU1AAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"ebc94db3017ba684a05079e468d552070ce95aeb\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRpYAAABXRUJQVlA4IIoAAABwCQCdASqgAFoAPm0ylUikIqIhKJEIMIANiWlu3QpugBG2R1osJtkB9emeONpafrj8M8lZc7zyzryQoHizaylFQ7mif7KHiMgT3kJxAdSW3K2N8WAA/vpAVm5x5gM8dMKK7vdLDwhm8O8rl5pS42d3FgfOuup5wCxAqQ8G1LqTJh5jJ9/9R9AAAAA=\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"eeeed5179429283c024a9e4c49e84e5cfbd9deab\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRvQAAABXRUJQVlA4IOgAAABQDACdASqgAFoAPm0wlUgkIqIhKzGIaIANiWkAFtgFubVIERzKV7Udq0/IVdldCOXv2dDqO1a9qRcb+EdU1EIGfSekP5TgZ9J6Q/lOBn0n1rxcb+EdUqupXH5bY24QgUvCKUhECEhK7CqQAAD+/51h/C3P5asAacVW78EdrJ4BIIlpxu2hKnbBYUlK0WIUZxi94Z+e5zfX94t4bXVz9C3LNX+bs/z8YDWjqXpceLsIxb4OOH+lV9PVFkpcmRLY95eMLFBsMgGWrpHCsvHgi5AbqGl8qOkuiwAz0KE50Tj2jqn6z5vGuwAA\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"c9d1549a608d3d9aff82d0ddc8b16104bf46899c\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRuQAAABXRUJQVlA4INgAAACwCwCdASqgAFoAPm0wlUgkIqIhKzGIoIANiWkAFtiANcAWS8hV4W/Z0NEVsKg7Vp+Qq8M7viJ/O+3bkqI6+wnv9cMJ1QT06facVWuw1XlvET+dwXsSbEqmjq0yIwdSFPjrniJ/O0AA/v+mn7zA1dz9AFxY5tLhHayeASCJacbtofIRzYOVpzLAIndnqpDbvhNNZ/jAHlF24ZPk3V6uDTfRWWKWVrrRaUgQi836yHChaZ/FFwBE7s9VJ8rCvV5AGeDQsBSzBg7BJxnbDh+wg3R462g4NDOAAAA=\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"a77b7d3910f490765ed8ab69e0593a9687cc8023\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRqIAAABXRUJQVlA4IJYAAADwCACdASqgAFoAPm00mEikIqKhKBM4MIANiWlu3QAEK/gMSliHeEavCBoLATBhp8P0tnL13K2tmrYcODdQO1ccFeRkwatPZSwvqwH9yrM98AD+/i6bcWc/lqwcTWA1a8OKBqzVgFFrlljmZ4RR/xSYVPCq9pUpWyr6SxZ3z7WH2Feiy5XN4kevJUBxhV00IOzQlqnQAAA=\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"164318af4372f2f183a927778e96a321f44386e7\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRvAAAABXRUJQVlA4IOQAAADwCQCdASqgAFoAPm02mEkkIqIhIbVY+IANiWlu4XPgrH0GhvMAvTk7atyxPW0BIAN2Gsx8GFVB+5xwo48APRCQOKCMbLAaW//R3Q1qchCp3Ya1Jyd0NZYAAP7/YNBcHM2Ayl0kh/hbLWovmEiHxi118unNKAgH7xMASY4cJBfdBPQZ5BpASvdxN7sTOS2Ji3e84K4ywrgM8B2T2rLvhsOzuAbAnVpEsLsJagq4xaZU6hGHYrvPHNDO52awhMxTkJ723okAGNc1FMwNrPj8z3lLTQEoJm1JPZ9uUmOVl8fcQ2AAAAA=\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"16ff627c96535f6e47995c94b3915a882fbe5356\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRioBAABXRUJQVlA4IB4BAACQCgCdASqgAFoAPm02mUkkIyKhI9bYUIANiWlu4XPg3wZQPADSBMtgTlhxs7bmHUl5LKGxxbZr12ejGoSUcqDcDD2u1cuByepyDrReeT8orp5Pyfk/J+T8n5Pye8AA/v27IS+vdJG+pLLux7RAC0FMdt4Zwk6RwYyd4uadO4wKBLoTOPsQkShJubfGrkHHRg7uD+bcst/uhI9f1LIi87CZCX7qnMF6WU4gKha1jCe1KSbq91eN5LA5hqEHGexfYvPqDf94LaCSBG8IkssnwYDkGAguF7PuDEIu5OBytuyZQ4Dr+tSTIoAhIfU5+rv30A2UJWOlF33K5XcAscQ69Q8k0kD3zFdHtHoB6GiIz8Sr9/crRo6v3INbYAAAAAAA\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"screenshot/block\\",\\"_id\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"@timestamp\\":1600300800000000,\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"blob\\":\\"UklGRlAAAABXRUJQVlA4IEQAAAAwBgCdASqgAFoAPm02mUmkIyKhIIgAgA2JaW7hdJAAT22IvEFRz2xF4gqOe2IvEFRz2xF4gqOe2ItgAP7/d9AAAAAAAA==\\",\\"blob_mime\\":\\"image/webp\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"step/screenshot_reference\\",\\"@timestamp\\":1600300800000000,\\"journey\\":{\\"name\\":\\"j1\\",\\"id\\":\\"j1\\"},\\"step\\":{\\"name\\":\\"launch app\\",\\"index\\":1},\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"payload\\":{\\"screenshot_ref\\":{\\"width\\":1280,\\"height\\":720,\\"blockWidth\\":160,\\"blockHeight\\":90,\\"blocks\\":[{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":0,\\"left\\":0},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":0,\\"left\\":160},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":0,\\"left\\":320},{\\"hash\\":\\"179333f72316bf86844017c9d0641ffd05baa1ed\\",\\"top\\":0,\\"left\\":480},{\\"hash\\":\\"fe4c7f3fb047c95b420ee28147665c42de3a13ee\\",\\"top\\":0,\\"left\\":640},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":0,\\"left\\":800},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":0,\\"left\\":960},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":0,\\"left\\":1120},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":90,\\"left\\":0},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":90,\\"left\\":160},{\\"hash\\":\\"379b4e68d52f42fdf5145b45a5fbab09f8771e9e\\",\\"top\\":90,\\"left\\":320},{\\"hash\\":\\"11d52112e38865c1be3c1ac9493f58ea7782221f\\",\\"top\\":90,\\"left\\":480},{\\"hash\\":\\"74b3eacc9a74fd182032cda4b1cd68475727dbaa\\",\\"top\\":90,\\"left\\":640},{\\"hash\\":\\"c0e9bd119b5639b52ea1a7b230ad2c9c9f5210df\\",\\"top\\":90,\\"left\\":800},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":90,\\"left\\":960},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":90,\\"left\\":1120},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":180,\\"left\\":0},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":180,\\"left\\":160},{\\"hash\\":\\"ebc94db3017ba684a05079e468d552070ce95aeb\\",\\"top\\":180,\\"left\\":320},{\\"hash\\":\\"eeeed5179429283c024a9e4c49e84e5cfbd9deab\\",\\"top\\":180,\\"left\\":480},{\\"hash\\":\\"c9d1549a608d3d9aff82d0ddc8b16104bf46899c\\",\\"top\\":180,\\"left\\":640},{\\"hash\\":\\"a77b7d3910f490765ed8ab69e0593a9687cc8023\\",\\"top\\":180,\\"left\\":800},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":180,\\"left\\":960},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":180,\\"left\\":1120},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":270,\\"left\\":0},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":270,\\"left\\":160},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":270,\\"left\\":320},{\\"hash\\":\\"164318af4372f2f183a927778e96a321f44386e7\\",\\"top\\":270,\\"left\\":480},{\\"hash\\":\\"16ff627c96535f6e47995c94b3915a882fbe5356\\",\\"top\\":270,\\"left\\":640},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":270,\\"left\\":800},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":270,\\"left\\":960},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":270,\\"left\\":1120},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":360,\\"left\\":0},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":360,\\"left\\":160},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":360,\\"left\\":320},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":360,\\"left\\":480},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":360,\\"left\\":640},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":360,\\"left\\":800},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":360,\\"left\\":960},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":360,\\"left\\":1120},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":450,\\"left\\":0},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":450,\\"left\\":160},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":450,\\"left\\":320},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":450,\\"left\\":480},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":450,\\"left\\":640},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":450,\\"left\\":800},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":450,\\"left\\":960},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":450,\\"left\\":1120},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":540,\\"left\\":0},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":540,\\"left\\":160},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":540,\\"left\\":320},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":540,\\"left\\":480},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":540,\\"left\\":640},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":540,\\"left\\":800},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":540,\\"left\\":960},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":540,\\"left\\":1120},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":630,\\"left\\":0},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":630,\\"left\\":160},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":630,\\"left\\":320},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":630,\\"left\\":480},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":630,\\"left\\":640},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":630,\\"left\\":800},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":630,\\"left\\":960},{\\"hash\\":\\"aee19c1f32131ed90e6dd34074a6e220ad97baf6\\",\\"top\\":630,\\"left\\":1120}]}},\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"journey/end\\",\\"@timestamp\\":1600300800000000,\\"journey\\":{\\"name\\":\\"j1\\",\\"id\\":\\"j1\\",\\"status\\":\\"failed\\"},\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"payload\\":{\\"start\\":0,\\"status\\":\\"failed\\"},\\"package_version\\":\\"0.0.1\\"}
"
`;

exports[`json reporter writes each step as NDJSON to the FD 1`] = `
"{\\"type\\":\\"journey/register\\",\\"@timestamp\\":1600300800000000,\\"journey\\":{\\"name\\":\\"j1\\",\\"id\\":\\"j1\\"},\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"journey/start\\",\\"@timestamp\\":1600300800000000,\\"journey\\":{\\"name\\":\\"j1\\",\\"id\\":\\"j1\\"},\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"payload\\":{\\"params\\":{\\"environment\\":\\"testing\\"},\\"source\\":\\"() => { }\\"},\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"step/end\\",\\"@timestamp\\":1600300800000000,\\"journey\\":{\\"name\\":\\"j1\\",\\"id\\":\\"j1\\"},\\"step\\":{\\"name\\":\\"s1\\",\\"index\\":1,\\"status\\":\\"succeeded\\"},\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"payload\\":{\\"source\\":\\"() => { }\\",\\"start\\":0,\\"end\\":10,\\"url\\":\\"dummy\\",\\"status\\":\\"succeeded\\"},\\"url\\":\\"dummy\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"journey/network_info\\",\\"@timestamp\\":1600300800000000,\\"journey\\":{\\"name\\":\\"j1\\",\\"id\\":\\"j1\\"},\\"root_fields\\":{\\"user_agent\\":{},\\"http\\":{\\"request\\":{\\"body\\":{\\"bytes\\":0,\\"content\\":\\"\\"}}},\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"payload\\":{\\"browser\\":{},\\"is_navigation_request\\":true},\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"journey/filmstrips\\",\\"@timestamp\\":1600300800000000,\\"journey\\":{\\"name\\":\\"j1\\",\\"id\\":\\"j1\\"},\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"payload\\":{\\"index\\":0,\\"startTime\\":392583.998697,\\"ts\\":392583998697},\\"blob\\":\\"dummy\\",\\"package_version\\":\\"0.0.1\\"}
{\\"type\\":\\"journey/end\\",\\"@timestamp\\":1600300800000000,\\"journey\\":{\\"name\\":\\"j1\\",\\"id\\":\\"j1\\",\\"status\\":\\"succeeded\\"},\\"root_fields\\":{\\"os\\":{\\"platform\\":\\"darwin\\"},\\"package\\":{\\"name\\":\\"@elastic/synthetics\\",\\"version\\":\\"0.0.1\\"}},\\"payload\\":{\\"start\\":0,\\"end\\":11,\\"status\\":\\"succeeded\\"},\\"package_version\\":\\"0.0.1\\"}
"
`;
